WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76095
HTMLIsIndexElement should not expose HTMLInputElement properties
https://bugs.webkit.org/show_bug.cgi?id=76095
Summary
HTMLIsIndexElement should not expose HTMLInputElement properties
Eric Seidel (no email)
Reported
2012-01-11 12:32:53 PST
HTMLIsIndexElement should not expose HTMLInputElement properties
Attachments
I need tests still
(1.20 KB, patch)
2012-01-11 12:33 PST
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
Patch
(4.31 KB, patch)
2012-01-11 12:53 PST
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
Patch
(57.44 KB, patch)
2012-01-11 14:18 PST
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.23 KB, patch)
2012-01-25 14:54 PST
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
Patch for landing
(47.87 KB, patch)
2012-01-25 18:54 PST
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
Patch for landing
(47.86 KB, patch)
2012-01-25 18:58 PST
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
Patch for landing
(47.86 KB, patch)
2012-01-25 19:03 PST
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
Patch for landing
(57.59 KB, patch)
2012-01-26 03:48 PST
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
Patch for landing
(68.97 KB, patch)
2012-01-26 19:31 PST
,
Eric Seidel (no email)
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Patch
(1.28 KB, patch)
2012-01-31 11:58 PST
,
Rafael Brandao
no flags
Details
Formatted Diff
Diff
Show Obsolete
(8)
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2012-01-11 12:33:40 PST
Created
attachment 122074
[details]
I need tests still
Eric Seidel (no email)
Comment 2
2012-01-11 12:34:54 PST
Since this will be an API change for Obj-C, we'll want Tim to see this. This came up due to IETC:
http://samples.msdn.microsoft.com/ietestcenter/dominheritance/showdominheritancetest.htm?Prototype_HTMLIsIndexElement
DOM 2 is pretty clear on this:
http://www.w3.org/TR/DOM-Level-2-HTML/html.html#ID-85283003
Since this is a deprecated element anyway, it makes sense to expose less on it.
Eric Seidel (no email)
Comment 3
2012-01-11 12:53:07 PST
Created
attachment 122079
[details]
Patch
Eric Seidel (no email)
Comment 4
2012-01-11 12:55:23 PST
Hmm. It's actually technically supposed to be an HTMLUnknownElement in HTML5:
http://www.whatwg.org/specs/web-apps/current-work/#dfnReturnLink-6
Although this patch is OK, we could go even further. :)
Timothy Hatcher
Comment 5
2012-01-11 13:17:30 PST
I dont see ObjC changes in the patch. The PublicDOMInterfaces.h should be touched. This element is not important, so changing the ObjC likely wont have an impact.
Eric Seidel (no email)
Comment 6
2012-01-11 14:18:07 PST
Created
attachment 122096
[details]
Patch
Eric Seidel (no email)
Comment 7
2012-01-11 14:18:46 PST
I've updated the patch with 10x more deletion. :)
Adam Barth
Comment 8
2012-01-11 14:23:14 PST
Comment on
attachment 122096
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=122096&action=review
> Source/WebCore/bindings/objc/PublicDOMInterfaces.h:-633 > -@interface DOMHTMLIsIndexElement : DOMHTMLInputElement WEBKIT_VERSION_1_3 > -@property(readonly, retain) DOMHTMLFormElement *form; > -@property(copy) NSString *prompt; > -@end
This isn't going to cause problems?
Eric Seidel (no email)
Comment 9
2012-01-11 14:24:06 PST
(In reply to
comment #8
)
> (From update of
attachment 122096
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=122096&action=review
> > > Source/WebCore/bindings/objc/PublicDOMInterfaces.h:-633 > > -@interface DOMHTMLIsIndexElement : DOMHTMLInputElement WEBKIT_VERSION_1_3 > > -@property(readonly, retain) DOMHTMLFormElement *form; > > -@property(copy) NSString *prompt; > > -@end > > This isn't going to cause problems?
That's up to Tim to decide. I'll let him comment before landing. I really doubt it. This element has been deprecated for some 10+ years. :)
Eric Seidel (no email)
Comment 10
2012-01-25 14:54:31 PST
Created
attachment 124018
[details]
Patch for landing
WebKit Review Bot
Comment 11
2012-01-25 16:18:16 PST
Comment on
attachment 124018
[details]
Patch for landing Clearing flags on attachment: 124018 Committed
r105940
: <
http://trac.webkit.org/changeset/105940
>
WebKit Review Bot
Comment 12
2012-01-25 16:18:21 PST
All reviewed patches have been landed. Closing bug.
Mark Rowe (bdash)
Comment 13
2012-01-25 16:56:56 PST
r105940
broke the build as it no longer generates DOMHTMLIsIndexElement.h but it's still present in the Xcode project and in WebKit/mac's MigrateHeaders.make.
Adam Barth
Comment 14
2012-01-25 17:01:02 PST
(In reply to
comment #13
)
>
r105940
broke the build as it no longer generates DOMHTMLIsIndexElement.h but it's still present in the Xcode project and in WebKit/mac's MigrateHeaders.make.
I pinged Eric. He says he'll fixenate.
Eric Seidel (no email)
Comment 15
2012-01-25 17:02:58 PST
My appologies. I'm happy to fix the Xcode proj if you haven't already.
Eric Seidel (no email)
Comment 16
2012-01-25 17:09:16 PST
Reverted
r105940
for reason: Only half this change landed Committed
r105947
: <
http://trac.webkit.org/changeset/105947
>
Eric Seidel (no email)
Comment 17
2012-01-25 17:11:59 PST
This was yet another example of
bug 77057
biting us. :) Thankfully that's now fixed. Hopefully we won't have this kind of half-apply confusion in the future.
Eric Seidel (no email)
Comment 18
2012-01-25 18:54:36 PST
Created
attachment 124054
[details]
Patch for landing
WebKit Review Bot
Comment 19
2012-01-25 18:56:43 PST
Comment on
attachment 124054
[details]
Patch for landing Rejecting
attachment 124054
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/11163153
Eric Seidel (no email)
Comment 20
2012-01-25 18:58:18 PST
Created
attachment 124055
[details]
Patch for landing
WebKit Review Bot
Comment 21
2012-01-25 19:02:04 PST
Comment on
attachment 124055
[details]
Patch for landing Rejecting
attachment 124055
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebKit/mac/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/11191160
Eric Seidel (no email)
Comment 22
2012-01-25 19:03:02 PST
Created
attachment 124056
[details]
Patch for landing
WebKit Review Bot
Comment 23
2012-01-25 20:20:38 PST
Comment on
attachment 124056
[details]
Patch for landing Rejecting
attachment 124056
[details]
from commit-queue. New failing tests: fast/dom/element-attribute-js-null.html fast/dom/dom-constructors.html fast/dom/Window/window-lookup-precedence.html fast/dom/wrapper-classes.html fast/forms/implicit-submission.html fast/dom/Window/element-constructors-on-window.html Full output:
http://queues.webkit.org/results/11163172
Eric Seidel (no email)
Comment 24
2012-01-26 03:48:00 PST
Created
attachment 124097
[details]
Patch for landing
WebKit Review Bot
Comment 25
2012-01-26 05:23:20 PST
Comment on
attachment 124097
[details]
Patch for landing Rejecting
attachment 124097
[details]
from commit-queue. New failing tests: fast/dom/Window/window-lookup-precedence.html fast/dom/wrapper-classes.html fast/forms/implicit-submission.html fast/dom/Window/element-constructors-on-window.html Full output:
http://queues.webkit.org/results/11297633
Darin Adler
Comment 26
2012-01-26 10:53:28 PST
Comment on
attachment 124097
[details]
Patch for landing After landing a patch like this there is also some cleanup that can be done for HTMLInputElement since it no longer has any classes derived from it. There are functions and features of HTMLInputElement that are only used by HTMLIsIndexElement.
Eric Seidel (no email)
Comment 27
2012-01-26 19:31:23 PST
Created
attachment 124238
[details]
Patch for landing
WebKit Review Bot
Comment 28
2012-01-26 21:06:44 PST
Comment on
attachment 124238
[details]
Patch for landing Rejecting
attachment 124238
[details]
from commit-queue. New failing tests: fast/dom/Window/window-lookup-precedence.html fast/dom/wrapper-classes.html fast/forms/implicit-submission.html fast/dom/Window/element-constructors-on-window.html Full output:
http://queues.webkit.org/results/11314889
Eric Seidel (no email)
Comment 29
2012-01-31 11:32:19 PST
These tests pass locally on Mac. This is fallout from v8/jsc differences and our insane cascade of expectations. I believe the best path forward is to land this and then rebaseline things from the bots. I'll notify the chromium gardner.
Eric Seidel (no email)
Comment 30
2012-01-31 11:48:00 PST
This appears to have landed in
http://trac.webkit.org/changeset/106373
but not updated the bug. I'll take a peak at the bots in a bit and see how much rebaselining is needed.
Rafael Brandao
Comment 31
2012-01-31 11:53:18 PST
(In reply to
comment #30
)
> This appears to have landed in
http://trac.webkit.org/changeset/106373
but not updated the bug. I'll take a peak at the bots in a bit and see how much rebaselining is needed.
This caused a build issue on qt, I'll upload a small patch here to fix it.
Eric Seidel (no email)
Comment 32
2012-01-31 11:58:30 PST
Oh boy. The feeder queue must be down, if this is failing to go through the EWSes?
Rafael Brandao
Comment 33
2012-01-31 11:58:36 PST
Created
attachment 124789
[details]
Patch
Eric Seidel (no email)
Comment 34
2012-01-31 11:59:33 PST
Oh, nm, these were all uploaded as "patch for landing" thus were never fed. The feeder-queue is fine:
http://queues.webkit.org/active-bots
Eric Seidel (no email)
Comment 35
2012-01-31 11:59:47 PST
Comment on
attachment 124789
[details]
Patch Thanks.
Eric Seidel (no email)
Comment 36
2012-01-31 12:00:43 PST
Comment on
attachment 124789
[details]
Patch Clearing flags on attachment: 124789 Committed
r106377
: <
http://trac.webkit.org/changeset/106377
>
Eric Seidel (no email)
Comment 37
2012-01-31 12:00:51 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 38
2012-01-31 12:00:54 PST
Attachment 124789
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit']" exit_code: 9 Updating OpenSource From git://git.webkit.org/WebKit c00f0a0..69e2a16 master -> origin/master Partial-rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ... Currently at 106373 = c00f0a0c31f2721d2fb62ca757c315e016c7c7b5
r106375
= 69e2a16f0d5685b4abb632e3fad459685b7487f7 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc M LayoutTests/platform/chromium/test_expectations.txt M Source/WebCore/ChangeLog M Source/WebCore/platform/graphics/gpu/DrawingBuffer.cpp
r106376
= b20e8a895f05dd841cd264088d3b83af0e98a788 (refs/remotes/origin/master) First, rewinding head to replay your work on top of it... Applying: Fix compilation errors on build-webkit --debug --no-workers on mac. Using index info to reconstruct a base tree... Falling back to patching base and 3-way merge... Auto-merging LayoutTests/ChangeLog CONFLICT (content): Merge conflict in LayoutTests/ChangeLog Auto-merging LayoutTests/platform/qt/Skipped CONFLICT (content): Merge conflict in LayoutTests/platform/qt/Skipped Auto-merging Source/WebCore/ChangeLog CONFLICT (content): Merge conflict in Source/WebCore/ChangeLog Auto-merging Source/WebCore/WebCore.exp.in Auto-merging Source/WebKit/mac/ChangeLog CONFLICT (content): Merge conflict in Source/WebKit/mac/ChangeLog Failed to merge in the changes. Patch failed at 0001 Fix compilation errors on build-webkit --debug --no-workers on mac. When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Seidel (no email)
Comment 39
2012-01-31 14:20:37 PST
I've rebaselined chromium using the awesome garden-o-matic. I believe there may be other failures due to custom results for various other ports, but no good tool to do those rebaselines (or even see the failures). I'm not convinced that
http://build.webkit.org/TestFailures
is actually workign right now.
Gyuyoung Kim
Comment 40
2012-01-31 21:31:01 PST
Hello Eric, There was build break in EFL port because of this patch. I fix it on
r106427
.
http://trac.webkit.org/changeset/106427
Please consider EFL port as well in future. :-)
Eric Seidel (no email)
Comment 41
2012-02-06 11:18:41 PST
(In reply to
comment #26
)
> (From update of
attachment 124097
[details]
) > After landing a patch like this there is also some cleanup that can be done for HTMLInputElement since it no longer has any classes derived from it. There are functions and features of HTMLInputElement that are only used by HTMLIsIndexElement.
MediaControlInputElement and UploadButtonElement appear to derive from it. But I'm looking at removing other cruft from isindex now.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug