Source/WebCore/DerivedSources.cpp
@@ -168,7 +168,6 @@
 #include "JSHTMLIFrameElement.cpp"
 #include "JSHTMLImageElement.cpp"
 #include "JSHTMLInputElement.cpp"
-#include "JSHTMLIsIndexElement.cpp"
 #include "JSHTMLKeygenElement.cpp"
 #include "JSHTMLLabelElement.cpp"
 #include "JSHTMLLegendElement.cpp"
